Updated trophy room button to repair out of bounds issue

--- a/src/styles/less/ChildDashboard.less
+++ b/src/styles/less/ChildDashboard.less
@@ -150,16 +150,7 @@
     cursor: pointer;
     display: flex;
     align-items: center;
-    background: @bright-sun;
-  }
-
-  .trophy-room-button img {
-    position: relative;
-  }
-
-  .trophy-room-button p {
-    position: absolute;
-    z-index: 1;
+    justify-content: center;
   }
 
   .multi-btn {
